@@ -1,5 +1,5 @@
 /* 
- * patternlab-node - v0.10.0 - 2015 
+ * patternlab-node - v0.10.1 - 2015 
  * 
  * Brian Muenzenmeyer, and the web community.
  * Licensed under the MIT license. 
@@ -40,7 +40,6 @@
 					var paramData = eval(paramString);
 
 					//compile this partial immeadiately, essentially consuming it.
-					//TODO: see how this affects lineage. perhaps add manually here.
 					var partialPattern = pattern_assembler.get_pattern_by_key(partialName, patternlab);
 					var existingData = pattern.data || patternlab.data;
 
@@ -48,7 +47,7 @@
 					for (var prop in paramData) {
 						if (existingData.hasOwnProperty(prop)) {
 							existingData[prop] = paramData[prop];
-						}
+						} 
 					}
 
 					//extend pattern data links into link for pattern link shortcuts to work. we do this locally and globally
@@ -57,9 +56,6 @@
 
 					//remove the parameter from the partial and replace it with the rendered partial + paramData
 					pattern.extendedTemplate = pattern.extendedTemplate.replace(pMatch, renderedPartial);
-
-					//TODO: lineage is missing for this pattern
-
 				});
 			}
 		}
